--- a/dev/html/-header.html
+++ b/dev/html/-header.html
@@ -7,9 +7,9 @@
 				</div>
 				<div class="col xs2 m7 l10 text-right">
 					<div class="header-pad_top">
-						<div class="header-box">us</div>
-						<div class="header-box">my account</div>
-						<div class="header-box">search</div>
+						<div class="header-box">$us</div>
+						<div class="header-box account">my account</div>
+						<div class="header-box search">search</div>
 					</div>
 				</div>
 			</div>
