--- a/dev/html/-header.html
+++ b/dev/html/-header.html
@@ -5,11 +5,11 @@
 				<div class="col xs2 m2 l2">
 					<p class="custom header-pad_top">CUstom Care: 888-23-4567</p>
 				</div>
-				<div class="col xs2 m7 l10 text-right">
+				<div class="col xs2 m7 l10 ">
 					<div class="header-pad_top">
-						<div class="header-box">$us</div>
+						<div class="header-box us">$ us</div>
 						<div class="header-box account">my account</div>
-						<div class="header-box search">search</div>
+						<div class="header-box search"><span>search</span></div>
 					</div>
 				</div>
 			</div>
