--- a/dev/index.html
+++ b/dev/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
 	<!--#insert file="html/-header.html"-->
+	<!--#insert file="html/-banner.html"-->
+    <!--#insert file="html/-email.html"-->
 </body>
 </html>
