--- a/dev/index.html
+++ b/dev/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+     <meta name="viewport" content="width=device-width">
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="css/general.css">
@@ -9,5 +10,6 @@
 	<!--#insert file="html/-header.html"-->
 	<!--#insert file="html/-banner.html"-->
     <!--#insert file="html/-email.html"-->
+      <!--#insert file="html/-info.html"-->
 </body>
 </html>
